--- a/pages/herostyles/hero1/assets/css/styles.css
+++ b/pages/herostyles/hero1/assets/css/styles.css
@@ -53,7 +53,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 100px; 
+    padding-top: 100px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .hero1-body.hero1-animated {
